Fix vertical alignment of the numbers and units

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
 .ns-label {
 /*    color: #bbb; */
 	text-align: right;
+	padding-top: 3px;
 }
 
 .ns-unit-label {
